# atask

./: .project.atask  README.md  README.mdc  pyproject.toml
.github/workflows/: build.yml  release.yml
atask/: cli.py  errors.py  formatters.py  schema.py  store.py  tree_ops.py  validators.py
atask.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/superpowers/plans/: 2026-04-14-atask-v1-implementation-plan.mdc
docs/superpowers/specs/: 2026-04-14-atask-skill-design.mdc
npm/: atask.spec  package.json
npm/scripts/: build.sh
tests/: conftest.py  test_cli_add.py  test_cli_init.py  test_cli_prune.py  test_cli_status.py  test_cli_tree.py  test_cli_validate.py
